--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,6 @@
 
 		h1.projects {
 			color: #00c25d;
-			font-family: "Source Code Pro";
 			font-size: 2em;
 			margin-top: 45px;
 			margin-bottom: 0px;
@@ -59,7 +58,7 @@
 			<a href="javascript:void(0)" class="close" onclick="closeSidebar()">×</a>
 			<a href="index.html">HOME</a>
 			<a href="about.html">ABOUT</a>
-			<a href="#">CV</a>
+			<a href="cv.html">CV</a>
 			<a href="#">CONTACT</a>
 		</div>
 		<div class="menuButton">
@@ -80,6 +79,7 @@
 		</div>
 		<div class="projectInfo">
 			<div id="flaskInfo" class="projectInfo">
+				<!-- <a href="javascript:void(0)" class="close" onclick="closeFlaskInfo()">×</a> -->
 				<h3>Flask API & RethinkDB</h3>
 				<h4><b>Date:</b> October - December 2019</h4>
 				<h4><b>Emphasis:</b> Data Acquisition, Data Persistence, Data API Programming</h4>
@@ -118,6 +118,7 @@
 				<p>To view the Flask API and receive the URL address for the data, type this in the browser: <span>http://127.0.0.1:5001/</span></p>
 			</div>
 			<div id="writerInfo" class="projectInfo">
+				<!-- <a href="javascript:void(0)" class="close" onclick="closeWriterInfo()">×</a> -->
 				<h3>WriterWorkshop.com</h3>
 				<h4><b>Date:</b> September - December 2019</h4>
 				<h4><b>Emphasis:</b> Web Development with HTML / CSS / JS</h4>
@@ -153,18 +154,21 @@
 				</ul>
 			</div>
 			<div id="webInfo" class="projectInfo">
+				<!-- <a href="javascript:void(0)" class="close" onclick="closeWebInfo()">×</a> -->
 				<h3>Web Scraping & Parsing Data</h3>
 				<h4><b>Date:</b> September - October 2019</h4>
 				<h4><b>Emphasis:</b> Web Scraping, Data Parsing</h4>
 				<h4><b>Description:</b></h4>
 			</div>
 			<div id="kpiInfo" class="projectInfo">
+				<!-- <a href="javascript:void(0)" class="close" onclick="closeKpiInfo()">×</a> -->
 				<h3>KPI Dashboard</h3>
 				<h4><b>Date:</b> May - August 2019</h4>
 				<h4><b>Emphasis:</b> Business Intelligence (BI), Report Development, Database Administration</h4>
 				<h4><b>Description:</b></h4>
 			</div>
 			<div id="pstrmiInfo" class="projectInfo">
+				<!-- <a href="javascript:void(0)" class="close" onclick="closePstrmiInfo()">×</a> -->
 				<h3>PSTRMI</h3>
 				<h4><b>Date:</b> January - April 2019</h4>
 				<h4><b>Emphasis:</b> Project Management, Database Administration, Application Development</h4>
@@ -207,6 +211,7 @@
 				orders and user error when data is inputted into the inventory system.</p>
 			</div>
 			<div id="dataInfo" class="projectInfo">
+				<!-- <a href="javascript:void(0)" class="close" onclick="closeDataInfo()">×</a> -->
 				<h3>Data Analytics Consulting Project</h3>
 				<h4><b>Date:</b> August - December 2017</h4>
 				<h4><b>Emphasis:</b> Big Data Analytics, Data Modeling, Business Intelligence (BI)</h4>
