--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 		h1.laura {
 			color: #fff;
+			font-family: "Source Code Pro";
 			font-size: 5em;
 			font-weight: 400;
 			letter-spacing: 10px;
