--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 		h1.about {
 			display: inline-block;
 			color: #00c25d;
+			font-family: "Source Code Pro";
 			font-size: 2em;
 			padding: 4px 6px 4px 6px;
 			margin-top: 55px;
