--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
 
 		h1.projects {
 			color: #00c25d;
+			font-family: "Source Code Pro";
 			font-size: 2em;
 			margin-top: 45px;
 			margin-bottom: 0px;
