--- a/cv.html
+++ b/cv.html
@@ -45,7 +45,7 @@
 			align-self: center;
 		}
 
-		.education {
+		.education, .experience, .volunteer {
 			display: grid;
 			grid-template-columns: 50% 50%;
 			color: #000;
@@ -54,32 +54,13 @@
 			padding: 50px;
 		}
 
-		.affiliation {
+		.affiliation, .skills {
 			display: grid;
 			grid-template-columns: 50% 50%;
 			color: #fff;
 			background-color: #000;
 			margin: 0px;
 			padding: 50px;
-		}
-
-		.experience {
-			display: grid;
-			grid-template-columns: 50% 50%;
-			color: #000;
-			background-color: #fff;
-			margin: 0px;
-			padding: 50px;
-		}
-
-		.skills {
-			display: grid;
-			grid-template-columns: 50% 50%;
-			color: #fff;
-			background-color: #000;
-			margin: 0px;
-			padding: 50px;
-		}
 		}
 	</style>
 </head>
@@ -117,9 +98,12 @@
 			</div>
 			<div class="section2">
 				<h3>The National Society of Leadership and Success</h3>
+				<p><i>August 2017 - December 2019</i></p>
 				<p>The National Society of Leadership and Success (Sigma Alpha Pi) recognizes scholar excellence and leadership capabilities, making membership an honorable achievement among students. As the Team Facilitator of my Success Networking Team, I was in charge of organizing bi-weekly meetings with my group and leading discussions about creating and accomplishing future goals.</p>
+				<br>
 				<h3>USU Invests</h3>
-				<p>A club at Utah State University that involves learning and designing Quantopian algorithms for stock trading.</p>
+				<p><i>January 2017 - January 2018</i></p>
+				<p>A club at Utah State University involved in learning and designing Quantopian algorithms for stock trading.</p>
 			</div>
 		</div>
 		<div class="experience">
@@ -132,6 +116,7 @@
 				<p><i>June 2018 - December 2019</i></p>
 				<p>Logan, UT</p>
 				<p>Troubleshooted basic issues with Apple and Windows operating systems, aided in simple authentication and networking issues, and assisted customers with professional technological help.</p>
+				<br>
 				<h3>Business Intelligence Intern</h3>
 				<h4>MarketStar</h4>
 				<p><i>May 2019 - August 2019</i>
@@ -142,6 +127,13 @@
 		<div class="skills">
 			<div class="section1">
 				<h2>SKILLS</h2>
+			</div>
+			<div class="section2">
+			</div>
+		</div>
+		<div class="volunteer">
+			<div class="section1">
+				<h2>VOLUNTEER</h2>
 			</div>
 			<div class="section2">
 			</div>
