--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<a href="about.html">ABOUT</a>
 			<a href="projects.html">PROJECTS</a>
 			<a href="cv.html">CV</a>
-			<a href="#">CONTACT</a>
+			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="menuButton">
 			<button class="open" onclick="openSidebar()">&#8801;</button>
