--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 			<a href="index.html">HOME</a>
 			<a href="projects.html">PROJECTS</a>
 			<a href="cv.html">CV</a>
-			<a href="#">CONTACT</a>
+			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="menuButton">
 			<button class="open" onclick="openSidebar()">&#8801;</button>
