--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
 			<a href="index.html">HOME</a>
 			<a href="about.html">ABOUT</a>
 			<a href="cv.html">CV</a>
-			<a href="#">CONTACT</a>
+			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="menuButton">
 			<button class="open" onclick="openSidebar()">&#8801;</button>
