--- a/cv.html
+++ b/cv.html
@@ -71,7 +71,7 @@
 			<a href="index.html">HOME</a>
 			<a href="about.html">ABOUT</a>
 			<a href="projects.html">PROJECTS</a>
-			<a href="#">CONTACT</a>
+			<a href="contact.html">CONTACT</a>
 		</div>
 		<div class="menuButton">
 			<button class="open" onclick="openSidebar()">&#8801;</button>
