--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,6 @@
 		</div>
 		<div class="projectInfo">
 			<div id="flaskInfo" class="projectInfo">
-				<!-- <a href="javascript:void(0)" class="close" onclick="closeFlaskInfo()">×</a> -->
 				<h3>Flask API & RethinkDB</h3>
 				<h4><b>Date:</b> October - December 2019</h4>
 				<h4><b>Emphasis:</b> Data Acquisition, Data Persistence, Data API Programming</h4>
@@ -119,7 +118,6 @@
 				<p>To view the Flask API and receive the URL address for the data, type this in the browser: <span>http://127.0.0.1:5001/</span></p>
 			</div>
 			<div id="writerInfo" class="projectInfo">
-				<!-- <a href="javascript:void(0)" class="close" onclick="closeWriterInfo()">×</a> -->
 				<h3>WriterWorkshop.com</h3>
 				<h4><b>Date:</b> September - December 2019</h4>
 				<h4><b>Emphasis:</b> Web Development with HTML / CSS / JS</h4>
@@ -155,21 +153,20 @@
 				</ul>
 			</div>
 			<div id="webInfo" class="projectInfo">
-				<!-- <a href="javascript:void(0)" class="close" onclick="closeWebInfo()">×</a> -->
 				<h3>Web Scraping & Parsing Data</h3>
 				<h4><b>Date:</b> September - October 2019</h4>
 				<h4><b>Emphasis:</b> Web Scraping, Data Parsing</h4>
-				<h4><b>Description:</b></h4>
+				<h4><b>Description:</b> For my machine learning class, this project required an independent reproduction of the professor’s research project. Using the Pandas, BeautifulSoup, and requests libraries, index files were scraped from the <a href="https://www.sec.gov/">sec.gov</a> website and then converted into CSV files so the user could download specific 10-K forms.</h4>
+				<h4><b>Source Code:</b><a href="https://github.com/ltlp/projects/tree/master/Web%20Scraping%20%26%20Parsing%20Data"> View</a></h4>
 			</div>
 			<div id="kpiInfo" class="projectInfo">
-				<!-- <a href="javascript:void(0)" class="close" onclick="closeKpiInfo()">×</a> -->
 				<h3>KPI Dashboard</h3>
 				<h4><b>Date:</b> May - August 2019</h4>
 				<h4><b>Emphasis:</b> Business Intelligence (BI), Report Development, Database Administration</h4>
-				<h4><b>Description:</b></h4>
+				<h4><b>Description:</b> The highlight of my BI internship, this project required building front-end CRM software for data entry and SQL queries. On top of that, a corporate-distributed KPI dashboard was designed using Power BI to outline employee attrition, company cost-savings per team, manager ratings, and time spent on client projects.</h4>
+				<p>*Note: All data and the dashboard are protected by MarketStar.</p>
 			</div>
 			<div id="pstrmiInfo" class="projectInfo">
-				<!-- <a href="javascript:void(0)" class="close" onclick="closePstrmiInfo()">×</a> -->
 				<h3>PSTRMI</h3>
 				<h4><b>Date:</b> January - April 2019</h4>
 				<h4><b>Emphasis:</b> Project Management, Database Administration, Application Development</h4>
@@ -212,7 +209,6 @@
 				orders and user error when data is inputted into the inventory system.</p>
 			</div>
 			<div id="dataInfo" class="projectInfo">
-				<!-- <a href="javascript:void(0)" class="close" onclick="closeDataInfo()">×</a> -->
 				<h3>Data Analytics Consulting Project</h3>
 				<h4><b>Date:</b> August - December 2017</h4>
 				<h4><b>Emphasis:</b> Big Data Analytics, Data Modeling, Business Intelligence (BI)</h4>
