--- a/cv.html
+++ b/cv.html
@@ -129,6 +129,35 @@
 				<h2>SKILLS</h2>
 			</div>
 			<div class="section2">
+				<h3>Programming</h3>
+				<p>Python</p>
+				<h3>Database Management</h3>
+				<p>SQL</p>
+				<p>DDL/DML</p>
+				<p>XML</p>
+				<h3>Web Development</h3>
+				<p>HTML/CSS</p>
+				<p>JavaScript</p>
+				<h3>Business</h3>
+				<p>Business Intelligence (BI)</p>
+				<p>Information Technology (IT)</p>
+				<p>Customer Relationship Management (CRM)</p>
+				<h3>Microsoft Software</h3>
+				<p>Microsoft SQL Server</p>
+				<p>Power BI</p>
+				<p>Microsoft Excel</p>
+				<p>Microsoft Word</p>
+				<p>Microsoft PowerPoint</p>
+				<p>Microsoft Project</p>
+				<h3>Other Software</h3>
+				<p>Jupyter Notebook</p>
+				<p>RapidMiner</p>
+				<p>Adobe Photoshop</p>
+				<h3>Operating Systems</h3>
+				<p>Windows</p>
+				<p>macOS</p>
+				<p>Linux Mint</p>
+				<h3></h3>
 			</div>
 		</div>
 		<div class="volunteer">
