--- a/cv.html
+++ b/cv.html
@@ -165,6 +165,35 @@
 				<h2>VOLUNTEER</h2>
 			</div>
 			<div class="section2">
+				<h3>Student Volunteer</h3>
+				<h4>Utah State University</h4>
+				<p><i>October 2019</i></p>
+				<p>Logan, UT</p>
+				<p>Volunteered for the Physics Department's Astronomy Night.</p>
+				<br>
+				<h3>Office Assistant</h3>
+				<h4>Jefferson High School</h4>
+				<p><i>August 2015 - May 2016</i></p>
+				<p>Shenandoah Junction, WV</p>
+				<p>In charge of filing papers, making print copies, filling out forms, and completing various organizational tasks for the school.</p>
+				<br>
+				<h3>Tutor</h3>
+				<h4>English as a Second Language (ESL)</h4>
+				<p><i>December 2014 - April 2016</i></p>
+				<p>Shenandoah Junction, WV</p>
+				<p>Tutored Spanish-speaking kids with English, mathematics, reading, writing, and science.</p>
+				<br>
+				<h3>Counselor</h3>
+				<h4>Summer camp</h4>
+				<p><i>July 2013 - July 2016</i></p>
+				<p>Shepherdstown, WV</p>
+				<p>Volunteered at a local camp for several summers. In charge of helping the youngest age group (3-4 years) with activities and lessons.</p>
+				<br>
+				<h3>Volunteer</h3>
+				<h4>Sara's House</h4>
+				<p><i>July 2013 - July 2014</i></p>
+				<p>Fort Meade, MD</p>
+				<p>Prepared and served food for the homeless.</p>				
 			</div>
 		</div>
 	</main>
