--- a/cv.html
+++ b/cv.html
@@ -111,17 +111,22 @@
 				<h2>EXPERIENCE</h2>
 			</div>
 			<div class="section2">
-				<h3>Student Technician</h3>
-				<h4>Utah State University</h4>
-				<p><i>June 2018 - December 2019</i></p>
-				<p>Logan, UT</p>
-				<p>Troubleshooted basic issues with Apple and Windows operating systems, aided in simple authentication and networking issues, and assisted customers with professional technological help.</p>
+				<h3>Programming Analyst</h3>
+				<h4>Western Digital</h4>
+				<p>Milpitas, CA</p>
+				<p>Data warehousing, ETL, ERP implementation.</p>
 				<br>
 				<h3>Business Intelligence Intern</h3>
 				<h4>MarketStar</h4>
 				<p><i>May 2019 - August 2019</i>
 				<p>Ogden, UT</p>
 				<p>Wrote queries using T-SQL in MS SQL Server to analyze raw client data, developed KPI reports, data visualizations, and company/client dashboards in Power BI, utilized and built front-end CRM software for data entry, analysis, and reporting.</p>
+				<br>
+				<h3>Student Technician</h3>
+				<h4>Utah State University</h4>
+				<p><i>June 2018 - December 2019</i></p>
+				<p>Logan, UT</p>
+				<p>Troubleshooted basic issues with Apple and Windows operating systems, aided in simple authentication and networking issues, and assisted customers with professional technological help.</p>
 			</div>
 		</div>
 		<div class="skills">
