--- a/cv.html
+++ b/cv.html
@@ -113,6 +113,7 @@
 			<div class="section2">
 				<h3>Programming Analyst</h3>
 				<h4>Western Digital</h4>
+				<p><i>February 2020 - Present</i></p>
 				<p>Milpitas, CA</p>
 				<p>Data warehousing, ETL, ERP implementation.</p>
 				<br>
