--- a/cv.html
+++ b/cv.html
@@ -115,7 +115,7 @@
 				<h4>Western Digital</h4>
 				<p><i>February 2020 - Present</i></p>
 				<p>Milpitas, CA</p>
-				<p>Data warehousing, ETL, ERP implementation.</p>
+				<p>Data warehousing, ETL, ERP implementation, PL/SQL.</p>
 				<br>
 				<h3>Business Intelligence Intern</h3>
 				<h4>MarketStar</h4>
